# 3D-Face-Recognition

./: README.md  license
identity/pcaknn-auto/: CMakeLists.txt  pcaknnMain.cpp
identity/pcaknn-auto/pcaknn/: CMakeLists.txt  PCAKNN.cpp  PCAKNN.h  PCAKNN.h~
identity/pcasvmlinear-auto/: CMakeLists.txt  pcasvmlinear.cpp
identity/pcasvmlinear-auto/pcasvm/: PCASVM.cpp  PCASVM.h~  SVM.cpp
identity/pcasvmpoly-auto/: CMakeLists.txt
identity/pcasvmpoly-auto/pcasvm/: CMakeLists.txt  PCASVM.cpp  PCASVM.h
rendererVtk/: CMakeLists.txt  rendering.cpp
